--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 						<div class="card-body landing-content">
 							<p class="card-text">Before being bitten by the programming bug I had been working within IT
 								with requirements developing one of charts, maps & flight planners in distributed
-								awesome team for an large aviation company. <a href="https://ww2.jeppesen.com/" class="btn btn-outline-secondary"
-									target="_blank"><i class="fas fa-plane"></i></a>
+								awesome team for an large aviation company. <a href="https://ww2.jeppesen.com/"
+									class="btn btn-outline-secondary" target="_blank"><i class="fas fa-plane"></i></a>
 							</p>
 						</div>
 					</div>
@@ -81,7 +81,7 @@
 						<div class="card-body landing-content">
 							<p class="card-text">Experience in Human Resources gave me wide business perspective on how
 								valuable is to get not only highly skilled but also suitably matched employees for an
-								organization. 
+								organization.
 								<a href="https://cpljobs.com/pl/?lang=en" class="btn btn-outline-secondary"
 									target="_blank"><i class="fas fa-user-friends"></i></a>
 								<br>
@@ -97,8 +97,9 @@
 						<div class="card-body landing-content">
 							<p class="card-text">TV News Media was an exciting experience. I thrived coordinating TV
 								crews as well as verifying and passing huge amount of information under time pressure. I
-								believe effective communication is a key success! 
-								<a href="https://tvn24.pl/" class="btn btn-outline-secondary" target="_blank"><i class="fas fa-tv"></i></a>
+								believe effective communication is a key success!
+								<a href="https://tvn24.pl/" class="btn btn-outline-secondary"
+									target="_blank"><i class="fas fa-tv"></i></a>
 							</p>
 						</div>
 					</div>
@@ -126,7 +127,8 @@
 									<br>
 									<br>My entry into IT begun with ISTQB certification and lead me towards web developemnt. First as intern I was testing web application manully and automatically.
 									<br>I love simple, outstanding design with focus on user experience and being fully testable. Please see my work:</p>
-									<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio</a>
+									<a href="#" class="btn btn-outline-secondary portfolio"
+										target="_blank">Portfolio</a>
 									<a href="https://www.istqb.org/" class="btn btn-outline-secondary"
 										target="_blank">ISTQB</a>
 							</div>
@@ -154,7 +156,8 @@
 									<br>
 									<br>I am highly committed with a can-do attitude and enthusiasm for technology and ability for learning new technologies quickly. I have to add more thext here otherwise it does not good. I have to add more thext here otherwise it does not good. Please see my portfolio: </p>
 									<!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
-									<a href="#" class="btn btn-outline-secondary" target="_blank">Portfolio</a>
+									<a href="#" class="btn btn-outline-secondary portfolio"
+										target="_blank">Portfolio</a>
 									<a href="https://www.ireb.org/en" class="btn btn-outline-secondary"
 										target="_blank">IREB</a>
 							</div>
@@ -234,8 +237,7 @@
 											<div class="modal-dialog" role="document">
 												<div class="modal-content">
 													<div class="modal-header">
-														<h5 class="modal-title" id="staticBackdropLabel">SAFe 5.0
-															overview
+														<h5 class="modal-title" id="staticBackdropLabel">Acceptance criteria vs Definition of Done
 														</h5>
 														<button type="button" class="close staticBackdrop-close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
                                                     </button>
@@ -243,7 +245,6 @@
 													<div class="modal-body">
 														<iframe id="staticBackdropScrum-iframe" width="560" height="315"
 															src="https://www.youtube.com/embed/ZxXL_sP-sqQ"
-															frameborder="0"
 															allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 															allowfullscreen></iframe>
 
@@ -284,16 +285,14 @@
 											<div class="modal-dialog" role="document">
 												<div class="modal-content">
 													<div class="modal-header">
-														<h5 class="modal-title" id="staticBackdropLabel">SAFe 5.0
-															overview
+														<h5 class="modal-title" id="staticBackdropLabel">SAFe PI planning
 														</h5>
 														<button type="button" class="close staticBackdrop-close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
                                                     </button>
 													</div>
 													<div class="modal-body">
 														<iframe id="staticBackdrop-iframe" width="560" height="615"
-															src="https://www.youtube.com/embed/aW2m-BtCJyE"
-															frameborder="0"
+															src="https://www.youtube.com/embed/PeykAokF_ew"
 															allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 															allowfullscreen></iframe>
 
@@ -353,9 +352,10 @@
 
 						<div class="row">
 							<div class="form-box">
-								  <h2>Get in touch</h2>
+								<h2>Get in touch</h2>
 								<div class="col-sm-6 contact-info">
-                              
+
+
 									<button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#contact-model1">Contact me!</button>
 									<div class="modal" tabindex="-1" role="dialog" id="contact-model1"
 										embed-responsive-16by9>
@@ -377,11 +377,19 @@
 											</div>
 										</div>
 									</div>
+
+
+
+
+
+
+
+
 								</div>
 								<div class="col-sm-6">
-									<button onclick=" window.open('assets/cv/cvAnnaJaniakJansson.pdf','_blank')" class="btn btn-outline-secondary">Download CV</button>
+									<button onclick=" window.open('assets/cv/cvAnnaJaniakJansson.pdf','_blank')" class="btn btn-outline-secondary">CV.pdf</button>
 								</div>
-							        </div>
+							</div>
 						</div>
 						<div class="row justify-content-center">
 							<div class="col-sm-6 contact-map">
@@ -389,7 +397,6 @@
 									src="https://maps.google.com/maps?width=500&amp;height=400&amp;hl=en&amp;q=Kista%2C%20Stockholm+(Address)&amp;ie=UTF8&amp;t=p&amp;z=9&amp;iwloc=B&amp;output=embed"
 									allowfullscreen></iframe>
 							</div>
-
 							<hr>
 							<div class="col-sm-6">
 								<h4>Drop me a message</h4>
@@ -413,10 +420,11 @@
 									</div>
 
 							</div>
-</div>
+						</div>
 				</section>
 			</div>
 		</div>
+
 		<!--FOOTER-->
 		<footer id="sticky-footer" class="py-2 bg-dark text-white-50">
 			<div class="container-fluid text-center">
