--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <p class="card-text">Before being bitten by the programming bug I had been working within IT with requirements developing one of charts, maps & flight planners in distributed awesome team for an large aviation company.
                             </p>
                             <div class="landing-content-item">
-                                <a href="https://ww2.jeppesen.com/" class="btn btn-outline-secondary " target="_blank"><i class="fas fa-plane"></i></a>
+                                <a href="https://ww2.jeppesen.com/" class="btn btn-outline-secondary " target="_blank"><i class="fas fa-plane"></i> Jeppesen Boeing</a>
                             </div>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
                             <p class="card-text">Experience in Human Resources gave me wide business perspective on how valuable is to get not only highly skilled but also suitably matched employees for an organization.
                             </p>
                             <div class="landing-content-item">
-                                <a href="https://cpljobs.com/pl/?lang=en" class="btn btn-outline-secondary" target="_blank"><i class="fas fa-user-friends"></i></a>
+                                <a href="https://cpljobs.com/pl/?lang=en" class="btn btn-outline-secondary" target="_blank"><i class="fas fa-user-friends"></i> CPL Jobs</a>
                             </div>
                         </div>
                     </div>
@@ -92,7 +92,7 @@
                         <div class="card-body landing-content">
                             <p class="card-text">TV News Media was an exciting experience. I thrived coordinating TV crews as well as verifying and passing huge amount of information under time pressure. I believe effective communication is a key success!</p>
                             <div class="landing-content-item">
-                                <a href="https://tvn24.pl/" class="btn btn-outline-secondary" target="_blank"><i class="fas fa-tv"></i></a>
+                                <a href="https://tvn24.pl/" class="btn btn-outline-secondary" target="_blank"><i class="fas fa-tv"></i> TVN24</a>
                             </div>
 
                         </div>
@@ -120,7 +120,7 @@
                                 <!--Text-->
                                 <p class="card-text">I am creative.
                                     <br>
-                                    <br>My entry into IT begun with ISTQB certification and lead me towards web developemnt. First as intern I was testing web application manully and automatically.
+                                    <br>My entry into IT began with ISTQB certification and lead me towards web developemnt. First as intern I was testing web application manully and automatically.
                                     <br>I love simple, outstanding design with focus on user experience and being fully testable. Please see my work:</p>
                                 <a href="http://example.com/" class="btn btn-outline-secondary portfolio" target="_blank">Portfolio</a>
                                 <a href="https://www.istqb.org/" class="btn btn-outline-secondary" target="_blank">ISTQB</a>
@@ -147,7 +147,7 @@
                                 <!--Text-->
                                 <p class="card-text">I am persistent.
                                     <br>
-                                    <br>I am highly committed with a can-do attitude and enthusiasm for technology and ability for learning new technologies quickly. I have to add more thext here otherwise it does not good. I have to add more thext here otherwise it does not good. Please see my portfolio: </p>
+                                    <br>I am highly committed with a can-do attitude and enthusiasm for technology and ability for learning new technologies quickly. I have to add more thext here otherwise it does not look good. I have to add more thext here otherwise it does not look good. Please see my portfolio: </p>
                                 <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
                                 <a href="http://example.com/" class="btn btn-outline-secondary portfolio" target="_blank">Portfolio</a>
                                 <a href="https://www.ireb.org/en" class="btn btn-outline-secondary" target="_blank">IREB</a>
