polished contact page

--- a/index.html
+++ b/index.html
@@ -363,11 +363,11 @@
 					<div class="container">
 						<div class="row">
 							<div class="form-box">
-								<div class="col-sm-12 contact-info">
+								<div class="col-sm-12 contact-info-box">
 									<h1 class="text-center">Get in touch</h1>
 									<hr>
 									<div class="contact-buttons text-center">
-										<button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#contact-model1">Contact me!</button>
+										<button type="button" class="btn btn-outline-secondary contact-info-button" data-toggle="modal" data-target="#contact-model1">Contact me!</button>
 										<button onclick=" window.open('assets/cv/cvAnnaJaniakJansson.pdf','_blank')" class="btn btn-outline-secondary">CV.pdf</button>
 									</div>
 									<div class="modal" tabindex="-1" role="dialog" id="contact-model1">
@@ -378,8 +378,8 @@
                                                         <span aria-hidden="true">&times;</span>
                                                     </button>
 												</div>
-												<div class="modal-body contact-info">
-													<p><i class="fas fa-phone"></i>
+												<div class="modal-body contact-info text-center">
+													<p class=><i class="fas fa-phone"></i>
 														<br> +46 793360854</p>
 														<hr>
 														<p><i class="far fa-envelope"></i>
