main page button fixed

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								with requirements developing one of charts, maps & flight planners in distributed
 								awesome team for an large aviation company.
 							</p>
-							<div class="landing-content-item">
+							<div class="landing-content-item text-center">
 								<a href="https://ww2.jeppesen.com/" class="btn btn-outline-secondary "
 									target="_blank"><i class="fas fa-plane"></i> Jeppesen Boeing</a>
 							</div>
@@ -86,7 +86,7 @@
 								valuable is to get not only highly skilled but also suitably matched employees for an
 								organization.
 							</p>
-							<div class="landing-content-item">
+							<div class="landing-content-item text-center">
 								<a href="https://cpljobs.com/pl/?lang=en" class="btn btn-outline-secondary"
 									target="_blank"><i class="fas fa-user-friends"></i> CPL Jobs</a>
 							</div>
@@ -97,7 +97,7 @@
 				<div class="col-sm-4">
 					<div class="card card-content-top mb-4">
 						<!--Card content-->
-						<div class="card-body landing-content">
+						<div class="card-body landing-content text-center">
 							<p class="card-text">TV News Media was an exciting experience. I thrived coordinating TV
 								crews as well as verifying and passing huge amount of information under time pressure. I
 								believe effective communication is a key success!</p>
