--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 					<div class="card card-content-top mb-4">
 						<!--Card content-->
 						<div class="card-body landing-content">
-							<p class="card-text">Before being bitten by the programming bug I had been working within IT
+							<p class="card-text">Before being bitten by the programming bug I'd been working within IT
 								with requirements developing one of charts, maps & flight planners in distributed
-								awesome team for an large aviation company.
+								awesome team for an aviation company.
 							</p>
 							<div class="landing-content-item text-center">
 								<a href="https://ww2.jeppesen.com/" class="btn btn-outline-secondary "
@@ -111,7 +111,7 @@
 					<!-- /Card 2-->
 				</div>
 			</div>
-			<hr>
+			
 			<!--container /div-->
 		</div>
 
@@ -123,7 +123,7 @@
 				<div class="card-deck">
 					<div class="col-sm-6">
 						<!-- Card 1-->
-						<div class="card mb-4">
+						<div class="card-wrapper-tech">
 							<!--Card content-->
 							<div class="card-body">
 								<!--Title-->
@@ -148,7 +148,7 @@
 
 					<!-- Card 2-->
 					<div class="col-sm-6">
-						<div class="card mb-4">
+						<div class="card-wrapper-tech">
 							<!--Card image-->
 							<div class="view overlay">
 								<div class="card-img-top backend-image image"></div>
@@ -403,7 +403,7 @@
 								</div>
 							</div>
 							<hr>
-							<div class="col-sm-6">
+							<div class="col-sm-6 title-contact-form">
 								<h4 class="text-center">Drop me a message</h4>
 								<hr>
 								<form action="https://api.formbucket.com/f/c2K3QTQ" method="post">
