--- a/index.html
+++ b/index.html
@@ -105,13 +105,11 @@
 								<a href="https://tvn24.pl/" class="btn btn-outline-secondary"
 									target="_blank"><i class="fas fa-tv"></i> TVN24</a>
 							</div>
-
 						</div>
 					</div>
 					<!-- /Card 2-->
 				</div>
 			</div>
-			
 			<!--container /div-->
 		</div>
 
@@ -364,7 +362,7 @@
 						<div class="row">
 							<div class="form-box">
 								<div class="col-sm-12 contact-info-box">
-									<h1 class="text-center">Get in touch</h1>
+									<h1>Get in touch</h1>
 									<hr>
 									<div class="contact-buttons text-center">
 										<button type="button" class="btn btn-outline-secondary contact-info-button" data-toggle="modal" data-target="#contact-model1">Contact me!</button>
@@ -379,7 +377,7 @@
                                                     </button>
 												</div>
 												<div class="modal-body contact-info text-center">
-													<p class=><i class="fas fa-phone"></i>
+													<p><i class="fas fa-phone"></i>
 														<br> +46 793360854</p>
 														<hr>
 														<p><i class="far fa-envelope"></i>
