--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!--SCROLL SPY-->
     <div data-spy="scroll" data-target="#test-navbar" data-offset="0">
 
-        <!--CONTENT-->
+        <!--CONTENT MAIN PAGE-->
         <div class="container content">
             <div class="row">
                 <div class="col-sm-12 landing-image image"></div>
@@ -56,8 +56,6 @@
                     </div>
                 </div>
             </div>
-            <!--CONTENT-->
-
             <div class="row cards-content">
                 <!-- Card 1-->
                 <div class="col-sm-4">
@@ -71,8 +69,9 @@
                             </div>
                         </div>
                     </div>
-                    <!-- /Card 2-->
+                    <!-- /Card 1-->
                 </div>
+                <!-- Card 2 -->
                 <div class="col-sm-4">
                     <div class="card card-content-top mb-4">
                         <!--Card content-->
@@ -84,8 +83,9 @@
                             </div>
                         </div>
                     </div>
-                    <!-- /Card 3-->
+                    <!-- /Card 2-->
                 </div>
+                <!-- Card 3 -->
                 <div class="col-sm-4">
                     <div class="card card-content-top mb-4">
                         <!--Card content-->
@@ -96,14 +96,12 @@
                             </div>
                         </div>
                     </div>
-                    <!-- /Card 2-->
+                    <!-- /Card 3-->
                 </div>
             </div>
-            <!--container /div-->
         </div>
 
-        <!--TECH CONTAINER-->
-        <!--CARDS-->
+        <!--TECH SUB PAGE-->
         <div class="container" id="tech">
             <div class="row cards-tech">
                 <!-- Card deck -->
@@ -154,10 +152,9 @@
                     </div>
                     <!-- /Card 2-->
                 </div>
-                <!-- /Card deck -->
             </div>
 
-            <!--PROGRESS SKILLS TECH-->
+            <!--Progress skills TECH-->
             <div class="wrapper">
                 <div class="container">
                     <div class="row">
@@ -167,19 +164,16 @@
                                 <div class="skill-bar-percent">55%</div>
                                 <div class="skillbar-bar" style="width: 55%;"></div>
                             </div>
-
                             <div class="skillbar" data-percent="80%">
                                 <div class="skillbar-title">CSS/CSS3</div>
                                 <div class="skill-bar-percent">80%</div>
                                 <div class="skillbar-bar" style="width: 80%;"></div>
                             </div>
-
                             <div class="skillbar" data-percent="40%">
                                 <div class="skillbar-title">JavaScript</div>
                                 <div class="skill-bar-percent">40%</div>
                                 <div class="skillbar-bar" style="width: 40%;"></div>
                             </div>
-
                             <div class="skillbar" data-percent="70%">
                                 <div class="skillbar-title">Python</div>
                                 <div class="skill-bar-percent">70%</div>
@@ -199,13 +193,10 @@
                 </div>
             </div>
             <div class="row cards-agile">
-                <!-- Card deck -->
                 <div class="card-deck">
-
-                    <!-- Card -->
+                    <!-- Card 1-->
                     <div class="col-sm-6">
                         <div class="card mb-4">
-
                             <!--Card content-->
                             <div class="card-body">
                                 <!--Title-->
@@ -217,7 +208,6 @@
                                 <div><a href="https://www.scrum.org/" class="btn btn-outline-secondary" target="_blank">Official website</a>
                                     <!-- Button trigger modal -->
                                     <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#staticBackdropScrum">Hint video</button>
-
                                     <!-- Modal -->
                                     <div class="modal fade" id="staticBackdropScrum" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                                         <div class="modal-dialog" role="document">
@@ -244,7 +234,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- /Card -->
+                    <!-- /Card 1-->
 
                     <!-- Card 2 -->
                     <div class="col-sm-6">
@@ -257,12 +247,9 @@
                                 <p class="card-text">proxy PRODUCT OWNER
                                     <br>
                                     <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veniam voluptates corrupti culpa, beatae illo officia recusandae magnam eos adipisci ullam doloremque debitis labore qui voluptatem aspernatur iure mollitia consequatur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veniam voluptates corrupti culpa, beatae illo officia recusandae magnam eos adipisci ullam doloremque debitis labore qui voluptatem aspernatur iure mollitia consequatur?</p>
-                                <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
                                 <div><a href="https://www.scaledagileframework.com/" class="btn btn-outline-secondary" target="_blank">Official website</a>
-
                                     <!-- Button trigger modal -->
                                     <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#staticBackdrop">Hint video</button>
-
                                     <!-- Modal -->
                                     <div class="modal fade" id="staticBackdrop" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                                         <div class="modal-dialog" role="document">
@@ -288,12 +275,11 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- /Card -->
+                        <!-- /Card 2-->
                     </div>
-                    <!-- /Card deck -->
                 </div>
             </div>
-            <!-- SKILL BAR AGILE -->
+            <!-- Progress skill bar AGILE -->
             <div class="wrapper">
                 <div class="container">
                     <div class="row">
@@ -319,16 +305,15 @@
                 </div>
             </div>
 
-            <!--CONTACT PAGE-->
-            <!--CONTACT IMAGE-->
+            <!--CONTACT SUB PAGE-->
+            <!--Contact image-->
             <div class="container-fluid" id="contact">
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="contact-image image"></div>
                     </div>
                 </div>
-
-                <!--CONTACT FORM-->
+                <!--Contact form-->
                 <section class="contact">
                     <div class="container">
                         <div class="row">
@@ -418,7 +403,6 @@
                             </li>
                         </ul>
                     </div>
-
                 </div>
                 <div class="row">
                     <div class="col-sm-12">
@@ -442,12 +426,6 @@
             target: '#test-navbar'
         })
     </script>
-    <!-- <script type="text/javascript">
-		$('#staticBackdrop').on('hidden.bs.modal', function () {
-        callPlayer('yt-player', 'stopVideo');
-    });
-	</script> -->
-
     <script>
         // Credit: https://stackoverflow.com/questions/13598423/stop-all-playing-iframe-videos-on-click-a-link-javascript
         $(function() {
