--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                 <p class="card-text">SCRUM MASTER
                                     <br>
                                     <br>As described in the Scrum Guide, the Scrum Master is responsible for promoting and supporting Scrum. Scrum Masters do this by helping everyone understand Scrum theory, practices, rules, and values. The Scrum Master is a servant-leader for the Scrum Team. The Scrum Master helps those outside the Scrum Team understand which of their interactions with the Scrum Team are helpful and which aren’t. The Scrum Master helps everyone change these interactions
-                                    </p>
+                                </p>
                                 <div><a href="https://www.scrum.org/" class="btn btn-outline-secondary" target="_blank">Official website</a>
                                     <!-- Button trigger modal -->
                                     <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#staticBackdropScrum">Hint video</button>
@@ -247,7 +247,8 @@
                                 <!--Text-->
                                 <p class="card-text">proxy PRODUCT OWNER
                                     <br>
-                                    <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veniam voluptates corrupti culpa, beatae illo officia recusandae magnam eos adipisci ullam doloremque debitis labore qui voluptatem aspernatur iure mollitia consequatur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis veniam voluptates corrupti culpa, beatae illo officia recusandae magnam eos adipisci ullam doloremque debitis labore qui voluptatem aspernatur iure mollitia consequatur?</p>
+                                    <br>The Product Owner (PO) is a member of the Agile Team responsible for defining Stories and prioritizing the Team Backlog to streamline the execution of program priorities while maintaining the conceptual and technical integrity of the Features or components for the team. The PO has a significant role in quality control and is the only team member empowered to accept stories as done. For most enterprises moving to Agile.
+                                </p>
                                 <div><a href="https://www.scaledagileframework.com/" class="btn btn-outline-secondary" target="_blank">Official website</a>
                                     <!-- Button trigger modal -->
                                     <button type="button" class="btn btn-outline-secondary" data-toggle="modal" data-target="#staticBackdrop">Hint video</button>
