working on typwriting

--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
 					<div class="typewriter" id="landing-content">
 						<h1 class="d-none d-md-block">I'm a full stack developer.</h1>
 					</div>
-					<h1 class="d-md-none">To be made static</h1>
-					<!-- Static for small screen | Just need to be styled -->
-
+					<div class="job-title-static text-center">
+						<h4 class="d-md-none">I'm a full stack developer</h4>
+						<!-- Static for small screen | Just need to be styled -->
+					</div>
 				</div>
 			</div>
 			<div class="row cards-content">
