still working on readme

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 			<div class="row">
 				<div class="col-sm-12">
 					<div class="typewriter" id="landing-content">
-						<h1 class="d-none d-md-block">I'm a full stack developer.</h1>
+						<h1 class="d-none d-lg-block">I'm a full stack developer.</h1>
 					</div>
 					<div class="job-title-static text-center">
-						<h4 class="d-md-none">I'm a full stack developer</h4>
+						<h4 class="d-lg-none">I'm a full stack developer</h4>
 						<!-- Static for small screen | Just need to be styled -->
 					</div>
 				</div>
