--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                 <!--Text-->
                                 <p class="card-text">I am persistent.
                                     <br>
-                                    <br>I am highly committed with a can-do attitude and enthusiasm for technology and ability for learning new technologies quickly. I have to add more thext here otherwise it does not look good. I have to add more thext here otherwise it does not look good. Please see my portfolio: </p>
+                                    <br>After testing my new role started with IREB certification (please see officail site below)  and  more than one year I had been working with functional and unfunctional requirememnts for a project being developed in Java and C++. That gave me good understanding of the data and backend environment. Please see my portfolio: </p>
                                 <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
                                 <a href="http://example.com/" class="btn btn-outline-secondary portfolio" target="_blank">Portfolio</a>
                                 <a href="https://www.ireb.org/en" class="btn btn-outline-secondary" target="_blank">IREB</a>
