--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <title>Anna Janiak</title>
+    <title>AJ</title>
 
 </head>
 
@@ -123,8 +123,8 @@
                                     <br>
                                     <br>My entry into IT began with ISTQB certification and lead me towards web developemnt. First as intern I was testing web application manully and automatically.
                                     <br>I love simple, outstanding design with focus on user experience and being fully testable. Please see my work:</p>
-                                <a href="http://example.com/" class="btn btn-outline-secondary portfolio" target="_blank">Portfolio</a>
-                                <a href="https://www.istqb.org/" class="btn btn-outline-secondary" target="_blank">ISTQB</a>
+                                <a href="https://annaweronica.github.io/european-news-service/" class="btn btn-outline-secondary portfolio" target="_blank">Portfolio</a>
+                                <a href="https://www.istqb.org/downloads/syllabi/foundation-level-syllabus.html" class="btn btn-outline-secondary" target="_blank">ISTQB</a>
                             </div>
                             <!--Card image-->
                             <div class="view overlay">
@@ -392,15 +392,15 @@
                     <div class="col-sm-12 social">
                         <ul class="list-inline list-unstyled">
                             <li class="list-inline-item">
-                                <a href="https://www.linkedin.com/in/anna-j-605a40177/" target="_blank"><i class="fab fa-linkedin-in"></i>
+                                <a href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin-in"></i>
 								</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://github.com/annaweronica?tab=repositories" target="_blank"><i class="fab fa-github"></i>
+                                <a href="https://github.com/" target="_blank"><i class="fab fa-github"></i>
 								</a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://www.meetup.com/members/276920213/" target="_blank"><i class="fab fa-meetup"></i>
+                                <a href="https://www.meetup.com/" target="_blank"><i class="fab fa-meetup"></i>
 								</a>
                             </li>
                         </ul>
